Fix menu being cut off by 50px top padding

--- a/css/menu.css
+++ b/css/menu.css
@@ -331,3 +331,10 @@
 .menu hr {
     width: 210px;
 }
+
+/* this makes up for the extra 50px at the top of the menu */
+.menu .menu-fix {
+    display: block;
+    height: 50px;
+    width: 100%;
+}
